Fix header with wrapping class

--- a/src/src/components/Main/Header.scss
+++ b/src/src/components/Main/Header.scss
@@ -4,28 +4,35 @@
   position: relative;
   display: block;
   z-index: 2;
+  width: 100%;
 
-  .banner {
+  .header-box {
     position: absolute;
-    right: 6rem;
-    top: 4rem;
-    a {
-      color: #000;
-      margin-left: 2rem;
-    }
-    .login {
-      margin-left: 2rem;
-    }
-  }
-  @include mobile {
+    width: 100%;
+    height: 8rem;
+    background-color: #fff;
     .banner {
-      right: 2rem;
+      position: absolute;
+      right: 6rem;
       top: 3rem;
       a {
-        margin-left: 1rem;
+        color: #000;
+        margin-left: 2rem;
       }
       .login {
-        margin-left: 1rem;
+        margin-left: 2rem;
+      }
+    }
+    @include mobile {
+      .banner {
+        right: 2rem;
+        top: 3rem;
+        a {
+          margin-left: 1rem;
+        }
+        .login {
+          margin-left: 1rem;
+        }
       }
     }
   }
